sp support message, new treatment of secondary login

--- a/_scss/config/_ucla-vars.scss
+++ b/_scss/config/_ucla-vars.scss
@@ -60,6 +60,8 @@ $footer-link-color-hover: $uclayellowneon;
 
 $form-valid-color: $uclalightblue;
 $form-invalid-color: $uclapinkneon;
+$input-background-color: lighten($neutral, 19.1%);
+$input-background-color-focus: $white;
 
 /////////////////////////////////////////
 ///       TYPOGRAPHY / RHYTHM
