--- a/_includes/ucla-sso-form-secondary.html
+++ b/_includes/ucla-sso-form-secondary.html
@@ -4,11 +4,7 @@
 	
 	<fieldset class="login-form">
 		<legend>Sign In with your UCLA Logon ID</legend>
-		
-		<div class="error-box">
-			<h2>Your ID and/or password were incorrect.
-		</div>
-		
+
 		<label for="logon">Account ID</label>
 		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus oninvalid="setCustomValidity('Logon IDs must be between 3 and 15 characters long')" onkeyup="try{setCustomValidity('')}catch(e){}" >
 
@@ -16,7 +12,7 @@
 		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern=".{8,128}" required oninvalid="setCustomValidity('Passwords must be at least 8 characters long')" onkeyup="try{setCustomValidity('')}catch(e){}">
 
 	</fieldset>
-	
+
 	<fieldset class="sso-submit">
 		<button class="primary-button" type="submit" name="sso">Sign In</button>
 	</fieldset>
@@ -25,5 +21,12 @@
 		<li><a href="#">Forgot your UCLA Logon ID or Password?</a></li>
 		<li><a href="#">Need a UCLA Logon ID?</a></li>
 	</ul>
+	
+	<p class="or">OR</p>
+	
+	<p class="meta center">Are you a member of UCLA Health Systems?</p>
+	
+	<a href="#" class="button secondary-button">Sign In with your Med Center ID</a>
+
 	
 </form>
