--- a/_scss/partials/_layout.scss
+++ b/_scss/partials/_layout.scss
@@ -5,11 +5,11 @@ section[role="main"] {
 	}
 }
 
-article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
+article, #sso, .sp-support, .tertiary-links-wrapper {
 	width: 94%;
 	margin: 0 auto;
 	@include breakpoint($grid-elastic) {
-		width: 36em;
+		width: 34.5em;
 	}
 }
 
