badge tweaks, sp-support = include, medcenter

--- a/_scss/config/_med-vars.scss
+++ b/_scss/config/_med-vars.scss
@@ -69,6 +69,8 @@ $footer-link-color-hover: $gold;
 
 $form-valid-color: $blue;
 $form-invalid-color: $rose;
+$input-background-color: lighten($neutral, 19.1%);
+$input-background-color-focus: $white;
 
 /////////////////////////////////////////
 ///       TYPOGRAPHY / RHYTHM
