--- a/_scss/partials/_supporting-content.scss
+++ b/_scss/partials/_supporting-content.scss
@@ -16,7 +16,7 @@ article {
 	position: relative;
 	background: $body-background-color;
 	box-shadow: 0 1px 1px #347bad;
-	padding: $half-spacing $default-spacing;
+	padding: $default-spacing $double-spacing;
 	border-radius: $global-border-radius;
 	legend {
 		display: none;
