--- a/css/medcenter.css
+++ b/css/medcenter.css
@@ -1,84 +1,1 @@
-/*
-Error: Undefined variable: "$input-background-color".
-        on line 6 of /Users/erutan/Github/SSOUI/_scss/partials/_form-elements.scss
-        from line 20 of /Users/erutan/Github/SSOUI/_scss/medcenter.scss
-
-1: // general layout gems
-2: @import 'singularitygs';
-3: @import 'breakpoint';
-4: @import 'compass/css3';
-5: @import 'compass/utilities/general/clearfix';
-6: 
-7: // normalize components, see https://github.com/ksmandersen/compass-normalize
-8: @import 'normalize-version';
-9: @import 'normalize/html5';
-10: @import 'normalize/base';
-11: @import 'normalize/links';
-
-Backtrace:
-/Users/erutan/Github/SSOUI/_scss/partials/_form-elements.scss:6
-/Users/erutan/Github/SSOUI/_scss/medcenter.scss:20
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/script/tree/variable.rb:49:in `_perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/script/tree/node.rb:50:in `perform'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:384:in `visit_prop'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:420:in `block (2 levels) in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:420:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:420:in `block in visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:418:in `visit_rule'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:315:in `block (2 levels) in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:315:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:315:in `block in visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:88:in `block in with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:88:in `with_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:312:in `visit_import'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `block in with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:115:in `with_frame'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/stack.rb:79:in `with_base'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:158:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:52:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:52:in `map'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:52:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:167:in `block in visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:179:in `with_environment'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:166:in `visit_children'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:36:in `block in visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:186:in `visit_root'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/base.rb:36:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:157:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/visitors/perform.rb:8:in `visit'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/root_node.rb:36:in `css_tree'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/tree/root_node.rb:20:in `render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/engine.rb:268:in `render'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/plugin/compiler.rb:491:in `update_stylesheet'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/plugin/compiler.rb:209:in `each'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/plugin/compiler.rb:469:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.7/lib/sass/plugin/compiler.rb:328:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.7.11/lib/listen/listener.rb:282:in `call'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.7.11/lib/listen/listener.rb:282:in `_process_changes'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.7.11/lib/listen/listener.rb:239:in `block in _wait_for_changes'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.7.11/lib/listen/listener.rb:222:in `loop'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.7.11/lib/listen/listener.rb:222:in `_wait_for_changes'
-/Library/Ruby/Gems/2.0.0/gems/listen-2.7.11/lib/listen/listener.rb:318:in `block in _start_wait_thread'
-*/
-body:before {
-  white-space: pre;
-  font-family: monospace;
-  content: "Error: Undefined variable: \"$input-background-color\".\A         on line 6 of /Users/erutan/Github/SSOUI/_scss/partials/_form-elements.scss\A         from line 20 of /Users/erutan/Github/SSOUI/_scss/medcenter.scss\A \A 1: // general layout gems\A 2: @import 'singularitygs';\A 3: @import 'breakpoint';\A 4: @import 'compass/css3';\A 5: @import 'compass/utilities/general/clearfix';\A 6: \A 7: // normalize components, see https://github.com/ksmandersen/compass-normalize\A 8: @import 'normalize-version';\A 9: @import 'normalize/html5';\A 10: @import 'normalize/base';\A 11: @import 'normalize/links';"; }
+﻿/*! normalize.css v3.0.0 | HTML5 Display Definitions | MIT License | git.io/normalize */article,aside,details,figcaption,figure,footer,header,hgroup,main,nav,section,summary{display:block}audio,canvas,progress,video{display:inline-block;vertical-align:baseline}audio:not([controls]){display:none;height:0}[hidden],template{display:none}/*! normalize.css v3.0.0 | Base | MIT License | git.io/normalize */html{font-family:sans-serif;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body{margin:0}/*! normalize.css v3.0.0 | Links | MIT License | git.io/normalize */a{background:transparent}a:active,a:hover{outline:0}/*! normalize.css v3.0.0 | Forms | MIT License | git.io/normalize */button,input,optgroup,select,textarea{color:inherit;font:inherit;margin:0}button{overflow:visible}button,select{text-transform:none}button,html input[type="button"],input[type="reset"],input[type="submit"]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}input{line-height:normal}input[type="checkbox"],input[type="radio"]{box-sizing:border-box;padding:0}input[type="number"]::-webkit-inner-spin-button,input[type="number"]::-webkit-outer-spin-button{height:auto}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-cancel-button,input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}fieldset{border:1px solid #c0c0c0;margin:0 2px;padding:0.35em 0.625em 0.75em}legend{border:0;padding:0}textarea{overflow:auto}optgroup{font-weight:bold}body{font-size:100%}html{background:#526991;background-size:cover;box-sizing:border-box;position:relative;min-height:100%;width:100%}*,*:before,*:after{box-sizing:inherit}body{color:#444;font-family:"Adobe Univers",Futura,"Trade Gothic",Univers;letter-spacing:0.5px}h1,h2,h3,h4{font-weight:normal;color:#526991;font-family:"Adobe Minion Regular",MinionPro,Bodoni,"Adobe Caslon",Century,Palatino}h1{font-size:1.75em;line-height:1.2375em;margin:0.5em 0}@media (min-width: 34em){h1{font-size:2em}}h2{font-size:1.25em}@media (min-width: 34em){h2{font-size:1.75em}}h3{font-size:1.25em}h4{font-size:1.125em}p{line-height:1.375em}a{color:#0081dc;text-decoration:underline;-moz-transition-property:color;-o-transition-property:color;-webkit-transition-property:color;transition-property:color;-moz-transition-duration:0.15s;-o-transition-duration:0.15s;-webkit-transition-duration:0.15s;transition-duration:0.15s}a:visited{color:#0081dc}a:hover,a:focus{text-decoration:underline;color:#0081dc;outline:0}a:focus{outline:thin dotted}a:active{outline:0}section[role="main"] ul{list-style:none;padding-left:.1em;margin-bottom:0}section[role="main"] ul li{margin:-.15em 0 0}section[role="main"] ul li:before{color:#444;content:"•";position:relative;font-size:1.6em;left:-.13em;top:.1em}.touch section[role="main"] li{margin:1em 0}input,textarea{width:100%;font-size:1.125em;background:#fafafa;margin-bottom:1em;border-radius:3px}@media (min-width: 34em){input,textarea{width:94%}}@media (min-width: 38em){input,textarea{width:21em;font-size:1.25em}}select,input,textarea{padding:0.5em 0.6em;display:inline-block;border:1px solid #c9cac8;box-shadow:inset 0 1px 3px #dbdcda;border-radius:3px}select:focus,input:focus,textarea:focus{outline:0;outline:thin dotted \9;border-color:#21578a;background:#fff}select[disabled],input[disabled]{cursor:not-allowed !important;background-color:#eaeded;color:#cad2d3}input:focus:invalid,select:focus:invalid{color:#a9302d;border-color:#bd3632}input:focus:invalid:focus,select:focus:invalid:focus{border-color:#bd3632}select{border:1px solid #c9cac8;background-color:#fff}fieldset{margin:0;padding:0;border:0}legend{text-align:center;font-size:1.75em;line-height:1.5125em;margin-bottom:0.5em;display:block;width:100%;font-weight:normal;color:#526991}@media (min-width: 34em){legend{text-align:left}}button,.button{width:100%;display:inline-block;*display:inline;zoom:1;line-height:normal;vertical-align:baseline;text-align:center;cursor:pointer;-webkit-user-drag:none;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;font-family:inherit;font-size:100%;*font-size:90%;*overflow:visible;padding:0.7em 1.1em;color:#444;color:rgba(0,0,0,0.8);*color:#444;border:1px solid #999;border:none transparent;background-color:#E6E6E6;text-decoration:none;border-radius:3px}@media (min-width: 34em){button,.button{width:auto}}button::-moz-focus-inner{padding:0;border:0}button:focus{outline:0}button:active{box-shadow:0 0 0 1px rgba(0,0,0,0.15) inset,0 0 6px rgba(0,0,0,0.2) inset}button[disabled]{border:none;background-image:none;filter:progid:DXImageTransform.Microsoft.gradient(enabled = false);filter:alpha(opacity=40);-khtml-opacity:0.40;-moz-opacity:0.40;opacity:0.40;cursor:not-allowed;box-shadow:none}section[role="main"]{margin:2em auto 8em}@media (min-width: 34em){section[role="main"]{margin:14.5% auto}}article,#sso,.sp-support,.tertiary-links-wrapper{width:94%;margin:0 auto}@media (min-width: 38em){article,#sso,.sp-support,.tertiary-links-wrapper{width:34.5em}}.tertiary-links{position:absolute;bottom:0;width:100%;height:4em}@media (min-width: 34em){.tertiary-links{height:2em}}.tertiary-links a,.tertiary-links span{display:block;width:100%}@media (min-width: 34em){.tertiary-links a,.tertiary-links span{display:inline;width:auto}}.right{float:right}.logo{display:block;margin:0 auto;width:80%}@media (min-width: 34em){.logo{width:70%}}.login-form{padding-bottom:0}#sso{background:#fff;box-shadow:0 1px 1px #347bad;overflow:hidden;border-radius:3px;padding:0 7.5% 2.5%}@media (min-width: 38em){#sso{padding:0 4em 1.5em}}#sso label{display:none}#sso fieldset{border:none}#sso .error-box{width:100%}@media (min-width: 34em){#sso .error-box{width:23.3em}}.sso-submit{width:100%;padding-top:0}@media (min-width: 34em){.sso-submit{width:23.25581%;float:left;margin-right:-100%;margin-left:0;clear:none}}.sso-links{width:100%;margin-bottom:1em;overflow:hidden;*zoom:1;font-size:0.75em}@media (min-width: 34em){.sso-links{width:74.4186%;float:right;margin-left:0;margin-right:0;clear:none;margin:0}}.primary-button{background-color:#526991;color:#fff;font-size:1.125em}.primary-button:hover{background-color:#ffb300;color:#40537B}.or{display:block;border:1px solid #c9cac8;border-radius:900px;width:2.5em;padding:.5em;margin:1.5em auto}@media (min-width: 34em){.or{margin:4em auto 1.5em}}.secondary-button{background-color:#347bad;color:#fff;display:block;font-size:0.75em;padding:1em;width:100%}@media (min-width: 34em){.secondary-button{width:22em;margin:0 auto;padding:0.5em}}.secondary-button:hover{background-color:#285f86;color:#fff}.sp-support{background:#c9cac8;padding:1em;margin:1em auto 0;border-radius:3px}.sp-support p,.sp-support li{font-size:0.75em}.sp-support h2{font-size:1.125em;margin:0}article{position:relative;background:#fff;box-shadow:0 1px 1px #347bad;padding:1em 2em;border-radius:3px}article legend{display:none}.badge{position:absolute;bottom:-4.5em;right:2em;width:6.25em;height:5em;background:#fff}@media (min-width: 34em){.badge{top:-3em;right:-2em}}.badge:before{content:"";position:absolute;top:0;left:-1.25em;width:0;height:0;border-top:2.5em solid transparent;border-right:1.25em solid #fff;border-bottom:2.5em solid transparent}.badge:after{content:"";position:absolute;right:-1.25em;width:0;height:0;border-top:2.5em solid transparent;border-left:1.25em solid #fff;border-bottom:2.5em solid transparent}.badge i{font-size:4.25em;color:#972b28;line-height:1.25em;padding-left:0.2381em}.error-box{background:repeating-linear-gradient(45deg, #972b28, #972b28 0.5em, #8f2926 0.5em, #8f2926 1em);color:#fff;padding:0.5em;border-radius:3px;text-align:center;margin-top:0}#report{overflow:hidden}#report label{display:block;margin-bottom:0.25em}.loading i{font-size:4em;margin:1em 40%}@media (min-width: 34em){.loading i{margin:1em 45%}}.meta{font-size:0.75em}.center{text-align:center}.tertiary-links{background:rgba(0,0,0,0.75);border-top:1px solid #40537B;padding:0.5em;color:#aaa}.tertiary-links-wrapper p{margin:0 auto;font-size:0.75em}.tertiary-links-wrapper a{text-decoration:none;color:#fff}.tertiary-links-wrapper a:visited{color:#fff}.tertiary-links-wrapper a:hover,.tertiary-links-wrapper a:focus{color:#ffb300;text-decoration:underline}
