form styling, error message tweaks, failed login

--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -6,7 +6,9 @@
 		<legend>Sign In with your UCLA Logon ID</legend>
 		
 		<div class="error-box">
-			<h2>Your ID and/or password were incorrect.
+			<h2>Your ID and/or password were incorrect.</h2>
+			
+			<p>Make sure you're signing in with the right account ID, and carefully retype your password. If you still have problems, try <a href="#">resetting your password or looking up your Logon ID</a>.</p>
 		</div>
 		
 		<label for="logon">Account ID</label>
