--- a/_scss/config/_ucla-vars.scss
+++ b/_scss/config/_ucla-vars.scss
@@ -49,7 +49,7 @@ $error-color-dark: darken($uclapinkneon, 42%);
 $error-color-dark-alt: darken($uclapinkneon, 46%);
 
 $secondary-login-option-color: #526991;
-$sp-support-bg: rgba($neutral, .45);
+$sp-support-bg: rgba($white, .55);
 
 $anchor-color: $uclapurpleneon;
 $anchor-color-hover: #1e4b87;
@@ -69,7 +69,7 @@ $input-background-color-focus: $white;
 
 $html-background: #d1e8f8 url('../images/skyline.jpg') no-repeat;
 
-$body-text-color: #666;
+$body-text-color: #333;
 $body-background-color: $white;
 
 $font-stack: 'Proxima Nova', Verdana, sans-serif;
