forms more prodish, update or/line-thru

--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -1,4 +1,4 @@
-<form id="sso" role="form">
+<form id="sso" role="form" action="/" method="post">
 	
 	<img src="{{ site.baseurl }}/images/ucla.png" alt="UCLA" class="logo">
 	
