--- a/_includes/ucla-sso-form-secondary.html
+++ b/_includes/ucla-sso-form-secondary.html
@@ -1,4 +1,4 @@
-<form id="sso" role="form">
+<form id="sso" role="form" action="/" method="post">
 	
 	<img src="{{ site.baseurl }}/images/ucla.png" alt="UCLA" class="logo">
 	
@@ -22,10 +22,12 @@
 		<li><a href="#">Need a UCLA Logon ID?</a></li>
 	</ul>
 	
-	<p class="or">OR</p>
-	
-	<p class="meta center">Are you a member of UCLA Health Systems?</p>
-	
-	<a href="#" class="button secondary-button">Sign In with your Med Center ID</a>
+	<aside class="secondary-login">
+  	<p class="line-thru">or</p>
+  	
+  	<p class="meta center">Are you a member of UCLA Health Systems?</p>
+  	
+  	<a href="#" class="button secondary-button">Sign In with your Med Center ID</a>
+	</aside>
 
 </form>
