--- a/_includes/health-sso-form.html
+++ b/_includes/health-sso-form.html
@@ -1,6 +1,6 @@
-<form id="sso" role="form">
+<form id="sso" role="form" action="/" method="post">
 	
-	<img src="{{ site.baseurl }}/images/health.png" alt="UCLA" class="logo">
+	<img src="{{ site.baseurl }}/images/health.png" alt="UCLA Health" class="logo">
 	
 	<fieldset class="login-form">
 		<legend>Sign In with your Medcenter ID</legend>
