--- a/_scss/medcenter.scss
+++ b/_scss/medcenter.scss
@@ -14,10 +14,14 @@
 // Medcenter Login Specfic
 @import 'config/med-vars';
 
-// General SSO Styles 
-@import 'mixins/badge';
-@import 'partials/global-elements';
-@import 'partials/form-elements';
-@import 'partials/layout';
-@import 'partials/login-form';
-@import 'partials/supporting-content';
+// general IAM partials
+@import 'ucla-iam/global-elements';
+@import 'ucla-iam/tables';
+@import 'ucla-iam/form-elements';
+@import 'ucla-iam/flair';
+@import 'ucla-iam/polyfill-overrides';
+
+// app specific styles
+@import 'ucla-app/layout';
+@import 'ucla-app/login-form';
+@import 'ucla-app/supporting-content';
