cleanup some restructuring

--- a/_scss/ucla-app/_login-form.scss
+++ b/_scss/ucla-app/_login-form.scss
@@ -67,6 +67,10 @@
 	}
 }
 
+.secondary-login {
+  margin-top: $quad-spacing;
+}
+
 .secondary-button {
 	background-color: $secondary-login-option-color;
 	color: $white;
