update footer border color

--- a/_scss/ucla-app/_supporting-content.scss
+++ b/_scss/ucla-app/_supporting-content.scss
@@ -68,7 +68,7 @@ article {
 
 .tertiary-links {
 	background: rgba($black, .75);
-	border-top: 1px solid $primary-color-alternate-state;
+	border-top: 1px solid $ucla-blue-light;
 	padding: $half-spacing;
 	color: lighten($body-text-color, 40%);
 }
