--- a/_includes/as-app-footer.html
+++ b/_includes/as-app-footer.html
@@ -1,6 +1,6 @@
 <footer role="contentinfo" class="tertiary-links">
 	<div class="tertiary-links-wrapper">
-		<p><a href="{{ site.baseurl }}/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="{{ site.baseurl }}/" class="right">NH</a></p>
+		<p><a href="{{ site.baseurl }}/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span></p>
 	</div>
 </footer>
 
