--- a/_scss/config/_med-vars.scss
+++ b/_scss/config/_med-vars.scss
@@ -103,6 +103,7 @@ $sp-support-bg: rgba($white, .55);
 /////////////////////////////////////////
 
 $html-background: $ucla-blue-old;
+$html-background-size: auto;
 
 $body-text-color: #444;
 $body-background-color: $white;
