--- a/_scss/config/_ucla-vars.scss
+++ b/_scss/config/_ucla-vars.scss
@@ -74,6 +74,7 @@ $sp-support-bg: rgba($white, .55);
 /////////////////////////////////////////
 
 $html-background: #d1e8f8 url('../images/skyline.jpg') no-repeat;
+$html-background-size: cover;
 
 $body-text-color: #444;
 $body-background-color: $white;
