mostly wording tweaks

--- a/_includes/as-app-sso-form.html
+++ b/_includes/as-app-sso-form.html
@@ -3,7 +3,7 @@
 	<img src="{{ site.baseurl }}/images/ucla-black.png" alt="UCLA" class="logo">
 
 	<fieldset class="login-form">
-		<legend>Sign In with your UCLA Logon ID</legend>
+		<legend>Sign In using this application's UCLA Logon Account</legend>
 
 		<label for="logon">Account ID</label>
 		<input id="logon" name="logon" type="text" placeholder="Application UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus oninvalid="setCustomValidity('Logon IDs must be between 3 and 15 characters long')" onkeyup="try{setCustomValidity('')}catch(e){}" >
