--- a/_includes/as-app-sso-form-fail.html
+++ b/_includes/as-app-sso-form-fail.html
@@ -1,6 +1,6 @@
 <form id="sso" role="form" action="/" method="post">
 	
-	<img src="{{ site.baseurl }}/images/ucla-blue.png" alt="UCLA" class="logo">
+	<img src="{{ site.baseurl }}/images/ucla-black.png" alt="UCLA" class="logo">
 	
 	<fieldset class="login-form">
 		<legend>Sign In using this application's UCLA Logon Account</legend>
