initial take on webshim customMessages

--- a/_includes/as-app-sp-support.html
+++ b/_includes/as-app-sp-support.html
@@ -1,5 +1,5 @@
 <aside class="sp-support">
-	<h2>You're Signing Into Lambda Labs as an application</h2>
+	<h2>You're Signing Into Lambda Labs with an application account</h2>
 	
 	<p>If you're having general issues signing in, please read our <a href="#">FAQ</a>. For issues specific to Lambda Labs, use the contact information below:</p>
 
