more error messages, partials dir name

--- a/_scss/config/_as-app-vars.scss
+++ b/_scss/config/_as-app-vars.scss
@@ -45,6 +45,7 @@ $primary-color: $black;
 $primary-color-alternate-state: $black;
 $secondary-color: $ucla-gold;
 
+$success-color: $ucla-green;
 $error-color: $ucla-pink;
 $error-color-dark: darken($ucla-pink, 42%);
 $error-color-dark-alt: darken($ucla-pink, 46%);
