--- a/_scss/config/_med-vars.scss
+++ b/_scss/config/_med-vars.scss
@@ -74,6 +74,7 @@ $primary-color: $ucla-blue-old;
 $primary-color-alternate-state: $ucla-blue-old-dark;
 $secondary-color: $gold;
 
+$success-color: $ucla-green;
 $error-color: $white;
 $error-color-dark: shade($rose, 20%);
 $error-color-dark-alt: shade($rose, 24%);
