--- a/_scss/config/_ucla-vars.scss
+++ b/_scss/config/_ucla-vars.scss
@@ -45,6 +45,7 @@ $primary-color: $ucla-blue-safe;
 $primary-color-alternate-state: $ucla-blue-dark;
 $secondary-color: $ucla-gold;
 
+$success-color: $ucla-green;
 $error-color: $ucla-pink;
 $error-color-dark: darken($ucla-pink, 42%);
 $error-color-dark-alt: darken($ucla-pink, 46%);
