--- a/_includes/as-app-sso-form.html
+++ b/_includes/as-app-sso-form.html
@@ -1,4 +1,4 @@
-<form id="sso" role="form" action="/" method="post">
+<form id="sso" role="form" action="/" method="post" class="ws-validate">
 
 	<img src="{{ site.baseurl }}/images/ucla-black.png" alt="UCLA" class="logo">
 
