--- a/_scss/as-app.scss
+++ b/_scss/as-app.scss
@@ -24,6 +24,7 @@
 @import 'ucla-iam-core/form-elements';
 @import 'ucla-iam-core/flair';
 @import 'ucla-iam-core/polyfill-overrides';
+@import 'ucla-iam-core/webshim-styling';
 
 // app specific styles
 @import 'ucla-this-app/layout';
