--- a/_scss/config/_ucla-vars.scss
+++ b/_scss/config/_ucla-vars.scss
@@ -57,7 +57,7 @@ $bullet-color: $ucla-green;
 $footer-link-color: $white;
 $footer-link-color-hover: $ucla-yellow;
 
-$form-valid-color: $ucla-blue-light;
+$form-valid-color: $success-color;
 $form-invalid-color: $ucla-pink;
 $input-background-color: lighten($neutral, 19%);
 $input-background-color-focus: $white;
