default ws class name, tweak styling

--- a/_scss/ucla-iam-core/_webshim-styling.scss
+++ b/_scss/ucla-iam-core/_webshim-styling.scss
@@ -1,8 +1,8 @@
 // https://afarkas.github.io/webshim/demos/demos/forms.html#UI-ival
 // options in sso.js
 
-.error-box {
-
+.ws-errorbox {
+  @extend .error-box;
 }
 
 .ws-errormessage {
