consolidate + clarify webshim/polyfill partials

--- a/_scss/ucla-iam-core/_webshim-styling.scss
+++ b/_scss/ucla-iam-core/_webshim-styling.scss
@@ -16,3 +16,13 @@
 .ws-success {
   
 }
+
+// override polyfilled date input
+
+input.ws-date {
+  width: 100% !important;
+}
+
+.date-input-buttons {
+  margin-bottom: $p-font-size; 
+}
