create new core partial, rename footer class

--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -1,5 +1,5 @@
-<footer role="contentinfo" class="tertiary-links">
-	<div class="tertiary-links-wrapper">
+<footer role="contentinfo" class="ucla-iam-footer">
+	<div class="ucla-iam-footer-wrapper">
 		<p><a href="{{ site.baseurl }}/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="{{ site.baseurl }}/" class="right">NH</a></p>
 	</div>
 </footer>
