--- a/_scss/medcenter.scss
+++ b/_scss/medcenter.scss
@@ -22,6 +22,7 @@
 @import 'ucla-iam-core/global-elements';
 @import 'ucla-iam-core/tables';
 @import 'ucla-iam-core/form-elements';
+@import 'ucla-iam-core/general-classes';
 @import 'ucla-iam-core/flair';
 @import 'ucla-iam-core/webshim-styling';
 
