--- a/_scss/ucla-this-app/_layout.scss
+++ b/_scss/ucla-this-app/_layout.scss
@@ -5,29 +5,11 @@ section[role="main"] {
 	}
 }
 
-article, #sso, .sp-support, .tertiary-links-wrapper {
+article, #sso, .sp-support, .ucla-iam-footer-wrapper {
 	width: 94%;
 	margin: 0 auto;
 	@include breakpoint($grid-elastic) {
 		width: 34.5em;
-	}
-}
-
-.tertiary-links {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
-	height: $quad-spacing;
-	@include breakpoint($grid-liquid) {
-		height: $double-spacing;
-	}
-	a, span {
-		display: block;
-		width: 100%;
-		@include breakpoint($grid-liquid) {
-			display: inline;
-			width: auto;
-		}
 	}
 }
 
