--- a/_includes/as-app-footer.html
+++ b/_includes/as-app-footer.html
@@ -1,5 +1,5 @@
 <footer role="contentinfo" class="ucla-iam-footer">
-	<div class="ucla-iam-footer-wrapper">
+	<div class="ucla-iam-footer-content">
 		<p><a href="{{ site.baseurl }}/ucla-logon-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span></p>
 	</div>
 </footer>
