--- a/_includes/health-footer.html
+++ b/_includes/health-footer.html
@@ -1,5 +1,5 @@
 <footer role="contentinfo" class="ucla-iam-footer">
-	<div class="ucla-iam-footer-wrapper">
+	<div class="ucla-iam-footer-content">
 		<p><a href="{{ site.baseurl }}/medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="{{ site.baseurl }}/" class="right">NH</a></p>
 	</div>
 </footer>
