--- a/_scss/as-app.scss
+++ b/_scss/as-app.scss
@@ -20,8 +20,8 @@
 
 // general IAM partials - DO NOT EDIT
 @import 'ucla-iam-core/global-elements';
-@import 'ucla-iam-core/tables';
-@import 'ucla-iam-core/tables';
+// @import 'ucla-iam-core/tables';
+@import 'ucla-iam-core/form-elements';
 @import 'ucla-iam-core/general-classes';
 @import 'ucla-iam-core/flair';
 @import 'ucla-iam-core/webshim-styling';
