--- a/_scss/ucla-logon.scss
+++ b/_scss/ucla-logon.scss
@@ -20,7 +20,7 @@
 
 // general IAM partials - DO NOT EDIT
 @import 'ucla-iam-core/global-elements';
-@import 'ucla-iam-core/tables';
+// @import 'ucla-iam-core/tables';
 @import 'ucla-iam-core/form-elements';
 @import 'ucla-iam-core/general-classes';
 @import 'ucla-iam-core/flair';
