--- a/_includes/health-footer.html
+++ b/_includes/health-footer.html
@@ -4,6 +4,6 @@
 	</div>
 </footer>
 
-<script src="{{ site.baseurl }}/js/jquery.min.js"></script>
-<script src="{{ site.baseurl }}/js/placeholdr.js"></script>
+<script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="{{ site.baseurl }}/bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
 <script src="{{ site.baseurl }}/js/sso.js"></script>
