--- a/_includes/health-sso-form-secondary.html
+++ b/_includes/health-sso-form-secondary.html
@@ -3,21 +3,15 @@
   <img src="{{ site.baseurl }}/images/health.png" alt="UCLA Health" class="logo">
   
   <legend>Sign In with your Medcenter ID</legend>
-    
-  <div class="error-box">
-    <h2>Your ID and/or password were incorrect.</h2>
-    
-    <p>Make sure you're signing in with the right account ID, and carefully retype your password. If you still have problems, try <a href="#">resetting your password or looking up your Logon ID</a>.</p>
-  </div>
 
   <fieldset class="fieldset">
     <label for="logon">Account ID</label>
     <input id="logon" name="logon" type="text" placeholder="Your Medcenter ID" aria-required="true" pattern=".{3,15}" required autofocus>
   </fieldset>
-
+    
   <fieldset class="fieldset">
     <label for="pass">Password</label>
-    <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" required>
+    <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" required data-errorbox="passerror">
   </fieldset>
   
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
@@ -26,5 +20,13 @@
     <li><a href="#">Forgot your Medcenter ID or Password?</a></li>
     <li><a href="#">Need a Medcenter ID?</a></li>
   </ul>
+  
+  <aside class="secondary-login">
+    <p class="line-thru">or</p>
+    
+    <p class="meta center">Are you a part of the general campus?</p>
+    
+    <a href="#" class="button secondary-button">Sign In UCLA Logon ID</a>
+  </aside>
   
 </form>
