--- a/_includes/health-sso-form.html
+++ b/_includes/health-sso-form.html
@@ -1,25 +1,24 @@
-<form id="sso" role="form" action="/" method="post">
-	
-	<img src="{{ site.baseurl }}/images/health.png" alt="UCLA Health" class="logo">
-	
-	<fieldset class="login-form">
-		<legend>Sign In with your Medcenter ID</legend>
-		
-		<label for="logon">Account ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your Medcenter ID" aria-required="true" pattern=".{3,15}" required autofocus>
+<form id="sso" role="form" action="/" method="post" class="ws-validate">
+  
+  <img src="{{ site.baseurl }}/images/health.png" alt="UCLA Health" class="logo">
+  
+  <legend>Sign In with your Medcenter ID</legend>
 
-		<label for="pass">Password</label>
-		<input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" required>
-
-	</fieldset>
-	
-	<fieldset class="sso-submit">
-		<button class="primary-button" type="submit" name="sso">Sign In</button>
-	</fieldset>
-	
-	<ul class="sso-links">
-		<li><a href="#">Forgot your Medcenter ID or Password?</a></li>
-		<li><a href="#">Need a Medcenter ID?</a></li>
-	</ul>
-	
+  <fieldset class="fieldset">
+    <label for="logon">Account ID</label>
+    <input id="logon" name="logon" type="text" placeholder="Your Medcenter ID" aria-required="true" pattern=".{3,15}" required autofocus>
+  </fieldset>
+    
+  <fieldset class="fieldset">
+    <label for="pass">Password</label>
+    <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" required data-errorbox="passerror">
+  </fieldset>
+  
+  <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
+  
+  <ul class="sso-links">
+    <li><a href="#">Forgot your Medcenter ID or Password?</a></li>
+    <li><a href="#">Need a Medcenter ID?</a></li>
+  </ul>
+  
 </form>
