--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -2,25 +2,25 @@
 	
 	<img src="{{ site.baseurl }}/images/ucla-blue.png" alt="UCLA" class="logo">
 	
-	<fieldset class="login-form">
-		<legend>Sign In with your UCLA Logon ID</legend>
+	<legend>Sign In with your UCLA Logon ID</legend>
 		
-		<div class="error-box">
-			<h2>Your ID and/or password were incorrect.</h2>
-			
-			<p>Make sure you're signing in with the right account ID, and carefully retype your password. If you still have problems, try <a href="#">resetting your password or looking up your Logon ID</a>.</p>
-		</div>
+	<div class="error-box">
+		<h2>Your ID and/or password were incorrect.</h2>
 		
+		<p>Make sure you're signing in with the right account ID, and carefully retype your password. If you still have problems, try <a href="#">resetting your password or looking up your Logon ID</a>.</p>
+	</div>
+		
+  <fieldset class="fieldset">
 		<label for="logon">Account ID</label>
 		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be between 3 and 15 characters long" >
+  </fieldset>
 
+  <fieldset class="fieldset">
 		<label for="pass">Password</label>
 		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern=".{8,128}" required data-errormessage="Passwords must be at least 8 characters long">
 	</fieldset>
 	
-	<fieldset class="sso-submit">
-		<button class="primary-button" type="submit" name="sso">Sign In</button>
-	</fieldset>
+  <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 	
 	<ul class="sso-links">
 		<li><a href="#">Forgot your UCLA Logon ID or Password?</a></li>
