--- a/_includes/health-sso-form-secondary.html
+++ b/_includes/health-sso-form-secondary.html
@@ -26,7 +26,7 @@
     
     <p class="meta center">Are you a part of the general campus?</p>
     
-    <a href="#" class="button secondary-button">Sign In UCLA Logon ID</a>
+    <a href="#" class="button secondary-button">Sign In with your UCLA Logon ID</a>
   </aside>
   
 </form>
