--- a/_scss/config/_med-vars.scss
+++ b/_scss/config/_med-vars.scss
@@ -75,9 +75,9 @@ $primary-color-alternate-state: $ucla-blue-old-dark;
 $secondary-color: $gold;
 
 $success-color: $ucla-green;
-$error-color: $white;
-$error-color-dark: shade($rose, 20%);
-$error-color-dark-alt: shade($rose, 24%);
+$error-color: $rose;
+$error-color-dark: tint($rose, 92.5%);
+$error-color-dark-alt: tint($rose, 94%);
 
 $anchor-color: #0081dc; // taken from identity.uclahealth.org
 $anchor-color-hover: #0081dc;
