include timer for countdown

--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -6,4 +6,5 @@
 
 <script src="{{ site.baseurl }}/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="{{ site.baseurl }}/bower_components/webshim/js-webshim/minified/polyfiller.js"></script>
+<script src="{{ site.baseurl }}/js/jquery.countdownTimer.min.js"></script>
 <script src="{{ site.baseurl }}/js/sso.js"></script>
