no green list items in sp-support messages

--- a/_includes/default-sp-support.html
+++ b/_includes/default-sp-support.html
@@ -3,8 +3,6 @@
 	
 	<p>If you're having general issues signing in, please read our <a href="#">FAQ</a>. For issues specific to Lambda Labs, use the contact information below:</p>
 
-	<ul>
-		<li>phone: (310) 208-0448</li>
-		<li>email: <a href="#">gordon@ucla.edu</a></li>
-	</ul>
+		<p><strong>phone:</strong> (310) 208-0448<br>
+		<strong>email:</strong> <a href="#">gordon@ucla.edu</a></p>
 </aside>
