title for footer link

--- a/_includes/health-footer.html
+++ b/_includes/health-footer.html
@@ -1,6 +1,6 @@
 <footer role="contentinfo" class="ucla-iam-footer">
 	<div class="ucla-iam-footer-content">
-		<p><a href="{{ site.baseurl }}/medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="{{ site.baseurl }}/as-app-mocks/index.html" class="right"><i class="fa fa-cogs"></i></a></p>
+		<p><a href="{{ site.baseurl }}/medcenter-mocks/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="{{ site.baseurl }}/as-app-mocks/index.html" class="right" title="login as the application"><i class="fa fa-cogs"></i></a></p>
 	</div>
 </footer>
 
