--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -6,7 +6,7 @@
 
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be between 3 and 15 characters long, consisting of only lowercase english alphabet letters and numbers" >
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be 3-15 characters long, consisting of only lowercase numbers and english letters" >
   </fieldset>
 
   <fieldset class="fieldset">
@@ -17,8 +17,8 @@
 	<button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 
 	<ul class="sso-links">
-		<li><a href="#">Forgot your UCLA Logon ID or Password?</a></li>
-		<li><a href="#">Need a UCLA Logon ID?</a></li>
+		<li><a href="#" alt="Forgot your UCLA Logon ID or Password?">Forgot your UCLA Logon ID or Password?</a></li>
+		<li><a href="#" alt="Need a UCLA Logon ID?">Need a UCLA Logon ID?</a></li>
 	</ul>
 
 </form>
