--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -12,7 +12,7 @@
 		
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be between 3 and 15 characters long" >
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be 3-15 characters long, consisting of only lowercase numbers and english letters" >
   </fieldset>
 
   <fieldset class="fieldset">
@@ -23,8 +23,8 @@
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 	
 	<ul class="sso-links">
-		<li><a href="#">Forgot your UCLA Logon ID or Password?</a></li>
-		<li><a href="#">Need a UCLA Logon ID?</a></li>
+		<li><a href="#" title="Forgot your UCLA Logon ID or Password?">Forgot your UCLA Logon ID or Password?</a></li>
+		<li><a href="#" atlt="Need a UCLA Logon ID?">Need a UCLA Logon ID?</a></li>
 	</ul>
 	
 </form>
