title text for help links, simplify error message

--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -7,7 +7,7 @@
 	<div class="error-box">
 		<h2>Your ID and/or password were incorrect.</h2>
 		
-		<p>Make sure you're signing in with the right account ID, and carefully retype your password. If you still have problems, try <a href="#">resetting your password or looking up your Logon ID</a>.</p>
+		<p><a href="#">Reset your password or lookup your Logon ID</a>.</p>
 	</div>
 		
   <fieldset class="fieldset">
@@ -23,8 +23,8 @@
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 	
 	<ul class="sso-links">
-		<li><a href="#" title="Forgot your UCLA Logon ID or Password?">Forgot your UCLA Logon ID or Password?</a></li>
-		<li><a href="#" atlt="Need a UCLA Logon ID?">Need a UCLA Logon ID?</a></li>
+		<li><a href="#" title="Reset your password or lookup your Logon ID">Forgot your UCLA Logon ID or Password?</a></li>
+		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
 	</ul>
 	
 </form>
