--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -17,8 +17,8 @@
 	<button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 
 	<ul class="sso-links">
-		<li><a href="#" alt="Forgot your UCLA Logon ID or Password?">Forgot your UCLA Logon ID or Password?</a></li>
-		<li><a href="#" alt="Need a UCLA Logon ID?">Need a UCLA Logon ID?</a></li>
+		<li><a href="#" title="Reset your password or lookup your Logon ID">Forgot your UCLA Logon ID or Password?</a></li>
+		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
 	</ul>
 
 </form>
