--- a/_includes/fatal-report-form.html
+++ b/_includes/fatal-report-form.html
@@ -3,14 +3,18 @@
 	<fieldset class="report-submission">
 		<legend>Report</legend>
 		
+		<label class="for-checkbox">Include Environmental Information</label>
+		<dl>
+		  <dt>IP Address</dt>
+		  <dd>foo</dd>
+		  <dt>OS</dt>
+		  <dd>foo</dd>
+		  <dt>Browser</dt>
+		  <dd>foo</dd>
+		</dl>
+
 		<label for="email">UCLA Email Address</label>
 		<input id="email" name="email" type="email" placeholder="joe.bruin@ucla.edu">
-		
-		<label for="contact">Error Number (we got this)</label>
-		<input id="contact" name="contact" type="text" value="oij2305u0392iroe" aria-required="true" disabled required>
-		
-		<label for="desc">Anything else you want to share?</label>
-		<textarea id="desc" name="desc" rows="5" placeholder="I was using Firefox 35 on OS X 10.10 and trying to log in to..."></textarea>
 
 	</fieldset>
 
