--- a/_scss/ucla-this-app/_layout.scss
+++ b/_scss/ucla-this-app/_layout.scss
@@ -16,3 +16,7 @@ article, #sso, .sp-support, .ucla-iam-footer-content {
 .right {
 	float: right;
 }
+
+.placeholder-text {
+  color: red !important;
+}
