--- a/_includes/health-sso-form-secondary.html
+++ b/_includes/health-sso-form-secondary.html
@@ -5,28 +5,28 @@
   <legend>Sign In with your Medcenter ID</legend>
 
   <fieldset class="fieldset">
-    <label for="logon">Account ID</label>
+    <label for="logon">Medcenter Account ID</label>
     <input id="logon" name="logon" type="text" placeholder="Your Medcenter ID" aria-required="true" pattern=".{3,15}" required autofocus>
   </fieldset>
     
   <fieldset class="fieldset">
-    <label for="pass">Password</label>
+    <label for="pass">Medcenter Password</label>
     <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" required data-errorbox="passerror">
   </fieldset>
   
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
   
-  <ul class="sso-links">
-    <li><a href="#">Forgot your Medcenter ID or Password?</a></li>
-    <li><a href="#">Need a Medcenter ID?</a></li>
-  </ul>
+	<ul class="sso-links">
+		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php">UCLA Logon ID</a> or Password?</a></li>
+		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+	</ul>
   
   <aside class="secondary-login">
     <p class="line-thru">or</p>
     
     <p class="meta center">Are you a part of the general campus?</p>
     
-    <a href="#" class="button secondary-button">Sign In with your UCLA Logon ID</a>
+    <a href="#">Sign In with your UCLA Logon ID</a>
   </aside>
   
 </form>
