--- a/_includes/health-sso-form.html
+++ b/_includes/health-sso-form.html
@@ -5,20 +5,20 @@
   <legend>Sign In with your Medcenter ID</legend>
 
   <fieldset class="fieldset">
-    <label for="logon">Account ID</label>
+    <label for="logon">Medcenter Account ID</label>
     <input id="logon" name="logon" type="text" placeholder="Your Medcenter ID" aria-required="true" pattern=".{3,15}" required autofocus>
   </fieldset>
     
   <fieldset class="fieldset">
-    <label for="pass">Password</label>
+    <label for="pass">Medcenter Password</label>
     <input id="pass" name="pass" type="password" placeholder="Your Medcenter Password" aria-required="true" pattern=".{8,128}" required data-errorbox="passerror">
   </fieldset>
   
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
   
-  <ul class="sso-links">
-    <li><a href="#">Forgot your Medcenter ID or Password?</a></li>
-    <li><a href="#">Need a Medcenter ID?</a></li>
-  </ul>
+	<ul class="sso-links">
+		<li><a href="#" title="Reset your password or lookup your Logon ID">Forgot your UCLA Logon ID or Password?</a></li>
+		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+	</ul>
   
 </form>
