--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -4,15 +4,16 @@
 	
 	<legend>Sign In with your UCLA Logon ID</legend>
 		
-	<div class="error-box">
+	<div class="error">
 		<h2>Your ID and/or password were incorrect.</h2>
 		
-		<p><a href="#">Reset your password or lookup your Logon ID</a>.</p>
+		
+		<p>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></p>
 	</div>
 		
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be 3-15 characters long, consisting of only lowercase numbers and english letters" >
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters">
   </fieldset>
 
   <fieldset class="fieldset">
@@ -23,8 +24,8 @@
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 	
 	<ul class="sso-links">
-		<li><a href="#" title="Reset your password or lookup your Logon ID">Forgot your UCLA Logon ID or Password?</a></li>
-		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></li>
+		<li><a href="https://logon.ucla.edu/activate.php" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
 	</ul>
 	
 </form>
