--- a/_includes/ucla-sso-form-secondary.html
+++ b/_includes/ucla-sso-form-secondary.html
@@ -6,7 +6,7 @@
 
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be 3-15 characters long, consisting of only lowercase numbers and english letters" >
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters">
   </fieldset>
 
   <fieldset class="fieldset">
@@ -17,16 +17,16 @@
 	<button class="primary-button" type="submit" name="sso-submit">Sign In</button>
 	
 	<ul class="sso-links">
-		<li><a href="#" title="Reset your password or lookup your Logon ID">Forgot your UCLA Logon ID or Password?</a></li>
-		<li><a href="#" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
+		<li>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></li>
+		<li><a href="https://logon.ucla.edu/activate.php" title="Create a UCLA Logon ID">Need a UCLA Logon ID?</a></li>
 	</ul>
 	
 	<aside class="secondary-login">
-  	<p class="line-thru">or</p>
+  	<span class="line-thru">or</span>
   	
-  	<p class="meta center">Are you a member of UCLA Health Systems?</p>
+  	<p>Are you a member of UCLA Health Systems?</p>
   	
-  	<a href="#" class="button secondary-button">Sign In with your Med Center ID</a>
+  	<p><a href="#">Sign In with your Med Center ID</a></p>
 	</aside>
 
 </form>
