--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -4,21 +4,18 @@
 	
 	<legend>Sign In with your UCLA Logon ID</legend>
 		
-	<div class="error">
+	<div class="error-box-lite">
 		<h2>Your ID and/or password were incorrect.</h2>
-		
-		
+				
 		<p>Forgot your <a href="https://logon.ucla.edu/userlookup.php" title="Lookup your UCLA Logon ID">UCLA Logon ID</a> or <a href="https://logon.ucla.edu/passreset.php" title="Reset your password">Password</a>?</a></p>
 	</div>
 		
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
-		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus data-errormessage="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters">
-  </fieldset>
+		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern="[a-z0-9]{3,15}" required autofocus data-errormessage="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters">
 
-  <fieldset class="fieldset">
 		<label for="pass">Your UCLA Logon Password</label>
-		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern=".{8,128}" required data-errormessage="Passwords must be at least 8 characters long">
+		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}" required data-errormessage="Passwords must be at least 8 characters long">
 	</fieldset>
 	
   <button class="primary-button" type="submit" name="sso-submit">Sign In</button>
