--- a/_scss/ucla-iam-core/_general-classes.scss
+++ b/_scss/ucla-iam-core/_general-classes.scss
@@ -13,6 +13,25 @@
 	margin-top: 0;
 }
 
+.error-box-lite {
+  color: $error-color;
+  h2, h3, p {
+    color: $error-color;
+  }
+  h2 {
+    font-size: $h3-font-size;
+  }
+  p {
+    font-size: $meta-font-size;
+  }
+  padding: $half-spacing;
+  border-radius: $global-border-radius;
+  border: 1px solid $error-color;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: $default-spacing;
+}
+
 .meta {
 	font-size: $meta-font-size;
 }
