--- a/_includes/ucla-sso-form.html
+++ b/_includes/ucla-sso-form.html
@@ -7,7 +7,9 @@
   <fieldset class="fieldset">
 		<label for="logon">Your UCLA Logon ID</label>
 		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern="[a-z0-9]{3,15}" required autofocus data-errormessage="Logon IDs must be 3 to 15 characters long, consisting of only numbers and lowercase english letters">
+  </fieldset>
 
+  <fieldset class="fieldset">
 		<label for="pass">Your UCLA Logon Password</label>
 		<input id="pass" name="pass" type="password" placeholder="Your UCLA Logon Password" aria-required="true" pattern="[a-zA-Z0-9 !@#$%^&*().,]{8,128}" required data-errormessage="Passwords must be at least 8 characters long">
 	</fieldset>
