form valid/invalid styling

--- a/_scss/config/_ucla-vars.scss
+++ b/_scss/config/_ucla-vars.scss
@@ -58,7 +58,7 @@ $footer-link-color: $white;
 $footer-link-color-hover: $ucla-yellow;
 
 $form-valid-color: $success-color;
-$form-invalid-color: $ucla-pink;
+$form-invalid-color: $error-color;
 $input-background-color: lighten($neutral, 19%);
 $input-background-color-focus: $white;
 
