--- a/_scss/ucla-this-app/_login-form.scss
+++ b/_scss/ucla-this-app/_login-form.scss
@@ -48,6 +48,9 @@
 }
 
 .sso-links {
+  li:before {
+		content: "" !important;
+  }
 	width: 100%;
 	margin-bottom: $default-spacing;
 	@include breakpoint($grid-liquid) {
